Fix dark mode not making locked blue

--- a/styles/Cell.module.css
+++ b/styles/Cell.module.css
@@ -46,6 +46,10 @@
   .selected {
     background-color: #333;
   }
+
+  .locked {
+    color: blue;
+  }
 }
 
 @media (max-width: 768px) {
